--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prebuild": "npm run build:tailwind",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,6 +38,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.5",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "msw": "^0.19.5",
     "postcss-cli": "^7.1.1"
   }
 }
