--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -20,5 +20,5 @@ jobs:
         with:
           node-version: "14.x"
       - run: yarn --frozen-lockfile
-      - run: yarn build --if-presen
+      - run: yarn build --if-present
       - run: yarn test
