--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,7 @@ jobs:
         with:
           browser: chrome
           headless: true
-          build: yarn build
-          start: PORT=3000 npx serve -s build
+          start: yarn start
           wait-on: http://localhost:3000
 
       - name: Deploy to netlify
