--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,9 @@ jobs:
         with:
           browser: chrome
           headless: true
-          start: yarn start
-          wait-on: http://localhost:3000
+          build: yarn build
+          start: yarn serve
+          wait-on: http://localhost:5000
 
       - name: Deploy to netlify
         uses: netlify/actions/cli@master
