--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "recoil": "^0.0.10",
+    "serve": "^11.3.2",
     "tailwindcss": "^1.7.3"
   },
   "scripts": {
@@ -20,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "cypress": "cypress open",
-    "test:e2e": "start-server-and-test 'yarn start' 3000 'yarn cypress'",
+    "test:e2e": "start-server-and-test 'PORT=5000 yarn start' 5000 'yarn cypress'",
+    "serve": "serve -s build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
