--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
           build: yarn build
           start: yarn serve
           wait-on: http://localhost:5000
+        env:
+          - REACT_APP_CI: true
 
       - name: Deploy to netlify
         uses: netlify/actions/cli@master
