--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "prebuild": "npm run build:tailwind",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:ci": "REACT_APP_CI=true CI=true react-scripts build",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "cypress": "cypress open",
     "cypress:headless": "cypress run --browser chrome --headless",
     "test:e2e": "start-server-and-test 'PORT=5000 yarn start' 5000 'yarn cypress'",
-    "test:e2e:ci": "REACT_APP_CI=true CI=true yarn build && start-server-and-test 'yarn serve' 5000 'yarn cypress:headless'",
+    "test:e2e:ci": "yarn build:ci && start-server-and-test 'yarn serve' 5000 'yarn cypress:headless'",
     "serve": "serve -s build",
     "eject": "react-scripts eject"
   },
